SERVER-57737 Index builds must save and restore the collection scanning cursor around writes to the violated index key constraints side table in case the write throws and unpositions the read cursor.