src/mongo/db/index/index_access_method.cpp
@@ -501,7 +501,9 @@ public:
                   const CollectionPtr& collection,
                   const BSONObj& obj,
                   const RecordId& loc,
-                  const InsertDeleteOptions& options) final;
+                  const InsertDeleteOptions& options,
+                  const std::function<void()>& saveCursorBeforeWrite,
+                  const std::function<void()>& restoreCursorAfterWrite) final;
 
     const MultikeyPaths& getMultikeyPaths() const final;
 
@@ -571,11 +573,14 @@ AbstractIndexAccessMethod::BulkBuilderImpl::BulkBuilderImpl(const IndexCatalogEn
       _isMultiKey(stateInfo.getIsMultikey()),
       _indexMultikeyPaths(createMultikeyPaths(stateInfo.getMultikeyPaths())) {}
 
-Status AbstractIndexAccessMethod::BulkBuilderImpl::insert(OperationContext* opCtx,
-                                                          const CollectionPtr& collection,
-                                                          const BSONObj& obj,
-                                                          const RecordId& loc,
-                                                          const InsertDeleteOptions& options) {
+Status AbstractIndexAccessMethod::BulkBuilderImpl::insert(
+    OperationContext* opCtx,
+    const CollectionPtr& collection,
+    const BSONObj& obj,
+    const RecordId& loc,
+    const InsertDeleteOptions& options,
+    const std::function<void()>& saveCursorBeforeWrite,
+    const std::function<void()>& restoreCursorAfterWrite) {
     auto& executionCtx = StorageExecutionContext::get(opCtx);
 
     auto keys = executionCtx.keys();
@@ -605,7 +610,12 @@ Status AbstractIndexAccessMethod::BulkBuilderImpl::insert(OperationContext* opCt
                                 "error"_attr = status,
                                 "loc"_attr = loc,
                                 "obj"_attr = redact(obj));
+
+                    // Save and restore the cursor around the write in case it throws a WCE
+                    // internally and causes the cursor to be unpositioned.
+                    saveCursorBeforeWrite();
                     interceptor->getSkippedRecordTracker()->record(opCtx, loc);
+                    restoreCursorAfterWrite();
                 }
             });
     } catch (...) {
